[package]
name = "bloggable"
version = "0.1.0"
edition = "2024"
authors = ["Jacob Dahan <jbdahan@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/JacobDahan/bloggable"
repository = "https://github.com/JacobDahan/bloggable"
keywords = ["cli", "ai", "blog"]
categories = ["command-line-utilities"]
description = "Transform git commits into engaging content with one command"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
exitcode = "1.1.2"
human-panic = "2.0.3"
serde = "1.0.219"
tokio = { version = "1.47.1", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
