[package]
name = "bloggable"
version = "0.1.0"
edition = "2024"
authors = ["Jacob Dahan <jbdahan@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/JacobDahan/bloggable"
repository = "https://github.com/JacobDahan/bloggable"
keywords = ["cli", "ai", "blog"]
categories = ["command-line-utilities"]
description = "Transform git commits into engaging content with one command"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
exitcode = "1.1.2"
futures = "0.3.31"
git2 = "0.20.2"
human-panic = "2.0.3"
once_cell = "1.21.3"
regex = "1.11.2"
serde = "1.0.219"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.19"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.21.0"
tokio-test = "0.4.4"
bloggable = { path = "." }
